# BloomCast

./: .gitignore  README.md
bloomcast-api/: README.md  __init__.py  cli.py  lake_targets.csv  main.py  nldas.py  nldas_2026-07-04_2026-07-11_manifest.csv  pyproject.toml  requirements.txt  sentinel2.py  sentinel2_sampled_availability.csv  target_lakes.csv
bloomcast-api/model/: rf_baseline.pkl
bloomcast-app/: index.html  package-lock.json  package.json
bloomcast-app/src/: App.jsx  Explainer.jsx  LakeMap.jsx
bloomcast-ml/: environment.yml  requirements.txt
bloomcast-ml/data/: biologicalmetric.csv  cli.py  lake_targets.csv  latest_lake_state.json  nldas.py  sentinel2.py  station.csv  tabular_features.csv
bloomcast-ml/models/: lstm_anomaly.pt  lstm_baseline.pt  lstm_log.pt  rf_baseline.pkl  rf_baseline_log.pkl
bloomcast-ml/results/: lstm_anomaly_results.json  lstm_baseline_results.json  lstm_log_results.json  rf_baseline_log_results.json  rf_baseline_results.json
bloomcast-ml/scripts/: build_latest_lake_state.py  cli.py  fetch_wqp_data.py  lakes.py  lstm_data_check.py  nldas.py  test_nldas.py  train_baseline.py  train_baseline_log.py  train_lstm.py  train_lstm_anomaly.py
